# Cmake

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/xinyi/com/cmake/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/xinyi/com/cmake/: BaseActivity.java  MD5Activity.java  MainActivity.java
app/src/main/jni/: testmd.c
app/src/main/res/layout/: activity_main.xml  main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/xinyi/com/cmake/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
